--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,7 @@
 
     <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
 
+    <string name="error_player_unknown">An unknown player error: %1$s</string>
+
     <string name="storage_permission_denied">Permission to access storage was denied</string>
 </resources>
