--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">Axinom DRM - quick start</string>
     <string name="select_video">Select the video to play</string>
-    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
     <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
     <string name="error_drm_unknown">An unknown DRM error occurred</string>
     <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
@@ -9,6 +8,7 @@
     <string name="error_querying_decoders">Unable to query device decoders</string>
     <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
     <string name="error_player_unknown">An unknown player error: %1$s</string>
+    <string name="error_unsupported_file_format">Unsupported file format</string>
     <string name="error_video_list">Error loading list of videos</string>
     <string name="error_drm_token">Error getting DRM token from server</string>
     <string name="storage_permission_denied">Permission to access storage was denied</string>
